third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/mutate_full.exp

Diagnostics:
error: implicit copy of mutable reference in local `x` which is used later
   ┌─ tests/reference-safety/v1-tests/mutate_full.move:12:13
   │
12 │         let f = x; // error in v2 because of copy
   │             ^ implicitly copied here
13 │         *f;
14 │         *x = 0;
   │         ------ used here
